plex-media-server/overlay/prod/patches/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
      - "complectogram.untergeek.net"
      secretName: default-wildcard
